<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lasalle.mdpa.busybudgeter.view.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/add_new_budget_button"
            android:text="Add new budget"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/budget_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>


</FrameLayout>
