...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Username/Mail"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="Username/Mail" />

...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="New Password"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="Password" />

...
